--- a/index.html
+++ b/index.html
@@ -3,8 +3,129 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+<section>
+    <div class="container">
+        <div class="row position-relative">
+            <div class="col-3 col-m6 header-height">logo</div>
+            <div class="col-6 col-m12 header-height">banner</div>
+            <div class="col-3 col-m6 header-height search-div">search</div>
 
+        </div>
+    </div>
+</section>
+<section>
+    <div class="container">
+        <div class="row">
+            <div class="col-12 menu-height">menu</div>
+        </div>
+    </div>
+</section>
+<section>
+    <div class="container">
+        <div class="row">
+            <div class="col-3 col-m4 body-height">sidebar</div>
+            <div class="col-9 col-m8">
+                <div class="row">
+                    <div class="col-4 box">
+                         <div class="img-box">
+                             <img src="img/aroni-arsa-children-little.jpg" alt="">
+                             
+                         </div>
+                    <div class="detail">
+                    <div class="content">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium amet asperiores beatae debitis doloribus enim et expedita illum itaque magni modi nisi, non obcaecati pariatur porro rerum sint sit ut.</p>
+                        <br>
+                        <a href="" class="btn">Read More</a>
+                    </div>
+                </div>
+            </div>
+                    <div class="col-4 box">
+                        <div class="img-box">
+                            <img src="img/white-flower-beautiful-hd-pic-japantown-215486907.jpg" alt="">
+
+                        </div>
+                        <div class="detail">
+                            <div class="content">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium amet asperiores beatae debitis doloribus enim et expedita illum itaque magni modi nisi, non obcaecati pariatur porro rerum sint sit ut.</p>
+                                <br>
+                                <a href="" class="btn">Read More</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4 box">
+                        <div class="img-box">
+                            <img src="img/download%20(3).jpg" alt="">
+
+                        </div>
+                        <div class="detail">
+                            <div class="content">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium amet asperiores beatae debitis doloribus enim et expedita illum itaque magni modi nisi, non obcaecati pariatur porro rerum sint sit ut.</p>
+                                <br>
+                                <a href="" class="btn">Read More</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4 box">
+                        <div class="img-box">
+                            <img src="img/grass-flowers-during-sunset-shadow-260nw-1267603696.webp" alt="">
+
+                        </div>
+                        <div class="detail">
+                            <div class="content">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium amet asperiores beatae debitis doloribus enim et expedita illum itaque magni modi nisi, non obcaecati pariatur porro rerum sint sit ut.</p>
+                                <br>
+                                <a href="" class="btn">Read More</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4 box">
+                        <div class="img-box">
+                            <img src="img/download%20(1).jpg" alt="">
+
+                        </div>
+                        <div class="detail">
+                            <div class="content">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium amet asperiores beatae debitis doloribus enim et expedita illum itaque magni modi nisi, non obcaecati pariatur porro rerum sint sit ut.</p>
+                                <br>
+                                <a href="" class="btn">Read More</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4 box">
+                        <div class="img-box">
+                            <img src="img/download.jpg" alt="">
+
+                        </div>
+                        <div class="detail">
+                            <div class="content">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium amet asperiores beatae debitis doloribus enim et expedita illum itaque magni modi nisi, non obcaecati pariatur porro rerum sint sit ut.</p>
+                                <br>
+                                <a href="" class="btn">Read More</a>
+                            </div>
+                        </div>
+                    </div>
+        </div>
+    </div>
+</section>
+<section>
+    <div class="container">
+        <div class="row">
+            <div class="col-3 col-m6 big-footer-height">footer one</div>
+            <div class="col-3 col-m6 big-footer-height">footer two</div>
+            <div class="col-3 col-m6 big-footer-height">footer three</div>
+            <div class="col-3 col-m6 big-footer-height">footer four</div>
+        </div>
+    </div>
+</section>
+<section>
+    <div class="container">
+        <div class="row">
+            <div class="col-12 footer-height"></div>
+        </div>
+    </div>
+</section>
 </body>
 </html>
